tests/ui_board/snapshots/ui_board__optional_thought_names__thought_name_collapsed_narrow.snap
---
source: tests/ui_board/optional_thought_names.rs
assertion_line: 448
expression: collapsed
---
SIZE 24x5

TEXT
00│  Compact title│
01│⋮ Compact body line one│
02│  proqi-ui-contract│
03│  1 · board · saved│
04│  n New   : Commands│

STYLE RUNS
0: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-23 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=BOLD
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-23 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-21 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 22-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
