tests/ui_board/snapshots/ui_board__optional_thought_names__thought_name_comfortable.snap
---
source: tests/ui_board/optional_thought_names.rs
assertion_line: 445
expression: "views::comfortable()"
---
SIZE 58x9

TEXT
00│  Release 計 画│
01│⋮ A body that remains visually separate from│
02│  organizational metadata.│
03││
04│                       + New thought│
05││
06│  proqi-ui-contract│
07│  1 thought · board · saved│
08│  n New   : Commands  ? Shortcuts│

STYLE RUNS
0: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-10 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=BOLD | 11-11 fg=Reset bg=Reset mod=NONE | 12-12 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=BOLD | 13-13 fg=Reset bg=Reset mod=NONE | 14-57 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=BOLD
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-57 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-57 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
3: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-22 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 23-23 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 24-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-55 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 56-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 11-21 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 22-22 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 23-57 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
