tests/ui_board/snapshots/ui_board__optional_thought_names__thought_name_editing_narrow.snap
---
source: tests/ui_board/optional_thought_names.rs
assertion_line: 490
expression: snapshot_buffer(editing_terminal.backend().buffer())
---
SIZE 24x5

TEXT
00│  界 界 界 界 界 界 界 界 界 界│
01│⋮ body stays separate│
02│  proqi-ui-contract│
03│  name edit│
04│  Save   Cancel│

STYLE RUNS
0: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 3-3 fg=Reset bg=Reset mod=NONE | 4-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 5-5 fg=Reset bg=Reset mod=NONE | 6-6 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 7-7 fg=Reset bg=Reset mod=NONE | 8-8 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 9-9 fg=Reset bg=Reset mod=NONE | 10-10 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 11-11 fg=Reset bg=Reset mod=NONE | 12-12 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 13-13 fg=Reset bg=Reset mod=NONE | 14-14 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 15-15 fg=Reset bg=Reset mod=NONE | 16-16 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 17-17 fg=Reset bg=Reset mod=NONE | 18-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 19-19 fg=Reset bg=Reset mod=NONE | 20-20 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 21-21 fg=Reset bg=Reset mod=NONE | 22-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-23 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-21 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 22-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
