tests/ui_board/snapshots/ui_board__optional_thought_names__thought_name_shallow.snap
---
source: tests/ui_board/optional_thought_names.rs
assertion_line: 377
expression: "snapshot_buffer(draw_theme(&mut compact, 18, 4,\nThemePreference::Dark).backend().buffer())"
---
SIZE 18x4

TEXT
00│⋮ Compact body│
01│  proqi-ui-contr│
02│  1 saved│
03│  : Menu ? Help│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-17 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-15 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 16-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-8 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 9-9 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 10-17 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
